# bffile

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  prek.yml
LICENSE/: LICENSE
docs/: api.md  index.md  usage.md
scripts/: benchmark_reopen.py  fetch_test_data.py  ndv_view.py  stubgen.py  sync_test_data.py
src/bffile/: __init__.py  _biofile.py  _core_metadata.py  _imread.py  _java_stuff.py  _jimports.py  _lazy_array.py  _series.py  _utils.py
tests/: conftest.py  test_bffile.py  test_biofile.py  test_dask.py  test_docs.py  test_edge_cases.py  test_java.py  test_java_constraints.py  test_lazy_array.py  test_lifecycle.py  test_multiseries.py  test_series.py  test_utils.py
typings/: README.md
typings/java/: __init__.pyi
typings/java/applet/: __init__.pyi
typings/java/awt/: __init__.pyi
typings/java/awt/color/: __init__.pyi
typings/java/awt/datatransfer/: __init__.pyi
typings/java/awt/desktop/: __init__.pyi
typings/java/awt/dnd/: __init__.pyi
typings/java/awt/dnd/peer/: __init__.pyi
typings/java/awt/event/: __init__.pyi
typings/java/awt/font/: __init__.pyi
typings/java/awt/geom/: __init__.pyi
typings/java/awt/im/: __init__.pyi
typings/java/awt/im/spi/: __init__.pyi
typings/java/awt/image/: __init__.pyi
typings/java/awt/image/renderable/: __init__.pyi
typings/java/awt/peer/: __init__.pyi
typings/java/awt/print_/: __init__.pyi
typings/java/beans/: __init__.pyi
typings/java/beans/beancontext/: __init__.pyi
typings/java/io/: __init__.pyi
typings/java/lang/: __init__.pyi
typings/java/lang/annotation/: __init__.pyi
typings/java/lang/classfile/: __init__.pyi
typings/java/lang/classfile/attribute/: __init__.pyi
typings/java/lang/classfile/constantpool/: __init__.pyi
typings/java/lang/classfile/instruction/: __init__.pyi
typings/java/lang/constant/: __init__.pyi
typings/java/lang/foreign/: __init__.pyi
typings/java/lang/instrument/: __init__.pyi
typings/java/lang/invoke/: __init__.pyi
typings/java/lang/management/: __init__.pyi
typings/java/lang/module/: __init__.pyi
typings/java/lang/ref/: __init__.pyi
typings/java/lang/reflect/: __init__.pyi
typings/java/lang/runtime/: __init__.pyi
typings/java/math/: __init__.pyi
typings/java/net/: __init__.pyi
typings/java/net/http/: __init__.pyi
typings/java/net/spi/: __init__.pyi
typings/java/nio/: __init__.pyi
typings/java/nio/channels/: __init__.pyi
typings/java/nio/channels/spi/: __init__.pyi
typings/java/nio/charset/: __init__.pyi
typings/java/nio/charset/spi/: __init__.pyi
typings/java/nio/file/: __init__.pyi
typings/java/nio/file/attribute/: __init__.pyi
typings/java/nio/file/spi/: __init__.pyi
typings/java/rmi/: __init__.pyi
typings/java/rmi/dgc/: __init__.pyi
typings/java/rmi/registry/: __init__.pyi
typings/java/rmi/server/: __init__.pyi
typings/java/security/: __init__.pyi
typings/java/security/cert/: __init__.pyi
typings/java/security/interfaces/: __init__.pyi
typings/java/security/spec/: __init__.pyi
typings/java/sql/: __init__.pyi
typings/java/text/: __init__.pyi
typings/java/text/spi/: __init__.pyi
typings/java/time/: __init__.pyi
typings/java/time/chrono/: __init__.pyi
typings/java/time/format/: __init__.pyi
typings/java/time/temporal/: __init__.pyi
typings/java/time/zone/: __init__.pyi
typings/java/util/: __init__.pyi
typings/java/util/concurrent/: __init__.pyi
typings/java/util/concurrent/atomic/: __init__.pyi
typings/java/util/concurrent/locks/: __init__.pyi
typings/java/util/function/: __init__.pyi
typings/java/util/jar/: __init__.pyi
typings/java/util/logging/: __init__.pyi
typings/java/util/prefs/: __init__.pyi
typings/java/util/random/: __init__.pyi
typings/java/util/regex/: __init__.pyi
typings/java/util/spi/: __init__.pyi
typings/java/util/stream/: __init__.pyi
typings/java/util/zip/: __init__.pyi
typings/loci/: __init__.pyi
typings/loci/common/: __init__.pyi
typings/loci/common/enumeration/: __init__.pyi
typings/loci/common/image/: __init__.pyi
typings/loci/common/services/: __init__.pyi
typings/loci/common/xml/: __init__.pyi
typings/loci/formats/: __init__.pyi
typings/loci/formats/cache/: __init__.pyi
typings/loci/formats/codec/: __init__.pyi
typings/loci/formats/dicom/: __init__.pyi
typings/loci/formats/filter/: __init__.pyi
typings/loci/formats/gui/: __init__.pyi
typings/loci/formats/in_/: __init__.pyi
typings/loci/formats/in_/LeicaMicrosystemsMetadata/: __init__.pyi
typings/loci/formats/meta/: __init__.pyi
typings/loci/formats/ome/: __init__.pyi
typings/loci/formats/services/: __init__.pyi
typings/loci/formats/tiff/: __init__.pyi
typings/loci/formats/tools/: __init__.pyi
typings/loci/poi/: __init__.pyi
typings/loci/poi/ddf/: __init__.pyi
typings/loci/poi/dev/: __init__.pyi
typings/loci/poi/hpsf/: __init__.pyi
typings/loci/poi/hpsf/wellknown/: __init__.pyi
typings/loci/poi/hssf/: __init__.pyi
typings/loci/poi/hssf/dev/: __init__.pyi
typings/loci/poi/hssf/eventmodel/: __init__.pyi
typings/loci/poi/hssf/eventusermodel/: __init__.pyi
typings/loci/poi/hssf/extractor/: __init__.pyi
typings/loci/poi/hssf/model/: __init__.pyi
typings/loci/poi/hssf/record/: __init__.pyi
typings/loci/poi/hssf/usermodel/: __init__.pyi
typings/loci/poi/hssf/util/: __init__.pyi
typings/loci/poi/poifs/: __init__.pyi
typings/loci/poi/util/: __init__.pyi
typings/ome/: __init__.pyi
typings/ome/codecs/: __init__.pyi
typings/ome/codecs/gui/: __init__.pyi
typings/ome/codecs/services/: __init__.pyi
typings/ome/jxrlib/: __init__.pyi
typings/ome/metakit/: __init__.pyi
typings/ome/specification/: __init__.pyi
typings/ome/units/: __init__.pyi
typings/ome/units/quantity/: __init__.pyi
typings/ome/units/unit/: __init__.pyi
typings/ome/xml/: __init__.pyi
typings/ome/xml/meta/: __init__.pyi
typings/ome/xml/model/: __init__.pyi
(+11 files in other folders)
